--- a/tmux.conf
+++ b/tmux.conf
@@ -26,8 +26,8 @@ set-option -g default-command "reattach-to-user-namespace -l bash"
 # Add truecolor support (tmux info | grep Tc)
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-# Key binding in the status line (bind-key :)
-set-option -g status-keys emacs
+# Key binding in the status line
+set-option -g status-keys vi
 
 # Mouse
 set-option -g mouse on
