--- a/tmux.conf
+++ b/tmux.conf
@@ -48,14 +48,9 @@ set -g pane-border-format "[#P: #{pane_current_command}]"
 # -------------------------------------------------------------------
 # Key bindings
 # -------------------------------------------------------------------
+
 # prefix c
 bind-key c new-window -c "#{pane_current_path}"
-
-# prefix ctrl-a
-bind-key c-a last-window
-
-# prefix a
-bind-key a send-prefix
 
 # prefix |
 bind-key | split-window -h -c "#{pane_current_path}"
@@ -67,10 +62,8 @@ bind-key - split-window -c "#{pane_current_path}"
 bind-key -r > swap-window -t :+
 bind-key -r < swap-window -t :-
 
-# Back and forth
-bind-key bspace previous-window
-bind-key space next-window
-bind-key / next-layout # Overridden
+# Change layout
+bind-key space next-layout
 
 # Pane-movement
 bind-key h select-pane -L
@@ -93,9 +86,6 @@ bind-key M-c run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of wi
 
 # Clear scrollback buffer
 bind-key C-l send-keys C-l \; clear-history
-
-# Goyo
-bind-key G set status
 
 # -------------------------------------------------------------------
 # Decoration (256-color)
