--- a/tmux.conf
+++ b/tmux.conf
@@ -73,6 +73,12 @@ bind-key k select-pane -U
 bind-key tab select-pane -t :.+
 bind-key btab select-pane -t :.-
 
+# Resize pane
+bind-key J resize-pane -D 3
+bind-key K resize-pane -U 3
+bind-key H resize-pane -L 3
+bind-key L resize-pane -R 3
+
 # Synchronize panes
 bind-key * set-window-option synchronize-pane
 
