--- a/tmux.conf
+++ b/tmux.conf
@@ -96,18 +96,17 @@ bind-key C-l send-keys C-l \; clear-history
 # -------------------------------------------------------------------
 # Decoration (256-color)
 # -------------------------------------------------------------------
-set-option -g status-justify left
-set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #h #[bg=colour236] '
-set-option -g status-left-length 16
-set-option -g status-bg colour237
-set-option -g status-right '#[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %b %d %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
 set-option -g status-interval 60
+set-option -g status-justify left
+set-option -g status-left '#[bg=colour236]'
+set-option -g status-bg colour237
+set-option -g status-right '#[bg=colour235]#[fg=colour3] #(date "+%a %b %d %H:%M")'
 
-set-option -g pane-active-border-fg colour240
+set-option -g pane-active-border-fg colour3
 set-option -g pane-border-fg colour238
 
-set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] '
-set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235]#[fg=colour195]#F#[bg=colour236] '
+set-window-option -g window-status-format '#[bg=colour234]#[fg=colour3] #I#[fg=colour3]  #W#[bg=colour234]#[fg=colour7]#F '
+set-window-option -g window-status-current-format '#[bg=colour3]#[fg=colour234] #I#[fg=colour1] #[bg=colour234] #W#[bg=colour235]#[fg=colour7]#F#[bg=colour236] '
 
 # set-window-option -g window-style 'bg=colour238'
 # set-window-option -g window-active-style 'bg=colour237'
