Fix vi-copy not working

--- a/tmux.conf
+++ b/tmux.conf
@@ -38,8 +38,8 @@ set-option -g mouse on
 # Copy-mode
 set-window-option -g mode-keys vi
 
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Enable pane title
 set -g pane-border-status top
