Change hotkey to reload tmux source

--- a/tmux.conf
+++ b/tmux.conf
@@ -83,7 +83,7 @@ bind-key L resize-pane -R 3
 bind-key * set-window-option synchronize-pane
 
 # Reload ~/.tmux.conf
-bind-key o source-file ~/.tmux.conf \; display-message "Reloaded config!"
+bind-key r source-file ~/.tmux.conf \; display-message "Reloaded config!"
 
 # Capture pane and open in Vim
 bind-key C-c run 'tmux capture-pane -S -102400 -p > /tmp/tmux-capture.txt'\;\
