Display message after clearing screen

--- a/tmux.conf
+++ b/tmux.conf
@@ -91,7 +91,7 @@ bind-key C-c run 'tmux capture-pane -S -102400 -p > /tmp/tmux-capture.txt'\;\
 bind-key M-c run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of window 1') -x -o -P /tmp/$(date +%Y%m%d-%H%M%S).png"
 
 # Clear scrollback buffer
-bind-key C-l send-keys C-l \; clear-history
+bind-key C-l send-keys C-l \; clear-history \; display-message "Cleared!"
 
 # -------------------------------------------------------------------
 # Decoration (256-color)
