--- a/tmux.conf
+++ b/tmux.conf
@@ -105,7 +105,7 @@ set-option -g status-right '#[bg=colour235]#[fg=colour3] #(date "+%a %b %d %H:%M
 set-option -g pane-active-border-fg colour3
 set-option -g pane-border-fg colour238
 
-set-window-option -g window-status-format '#[bg=colour234]#[fg=colour3] #I#[fg=colour3]  #W#[bg=colour234]#[fg=colour7]#F '
+set-window-option -g window-status-format '#[bg=colour234]#[fg=colour3] #I #[bg=colour237]#[fg=colour3] #W#[fg=colour7]#F'
 set-window-option -g window-status-current-format '#[bg=colour3]#[fg=colour234] #I#[fg=colour1] #[bg=colour234] #W#[bg=colour235]#[fg=colour7]#F#[bg=colour236] '
 
 # set-window-option -g window-style 'bg=colour238'
