--- a/tmux.conf
+++ b/tmux.conf
@@ -30,7 +30,7 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g status-keys vi
 
 # Mouse
-set-option -g mouse on
+# set-option -g mouse on
 
 # -------------------------------------------------------------------
 # Window options
