Tmux: change hotkey for capture-pane

--- a/tmux.conf
+++ b/tmux.conf
@@ -86,7 +86,7 @@ bind-key * set-window-option synchronize-pane
 bind-key r source-file ~/.tmux.conf \; display-message "Reloaded config!"
 
 # Capture pane and open in Vim
-bind-key C-c run 'tmux capture-pane -S -102400 -p > /tmp/tmux-capture.txt'\;\
+bind-key C-o run 'tmux capture-pane -S -102400 -p > /tmp/tmux-capture.txt'\;\
              new-window "reattach-to-user-namespace view /tmp/tmux-capture.txt"
 bind-key M-c run "screencapture -l$(osascript -e 'tell app \"iTerm\" to id of window 1') -x -o -P /tmp/$(date +%Y%m%d-%H%M%S).png"
 
