--- a/tmux.conf
+++ b/tmux.conf
@@ -100,7 +100,7 @@ set-option -g status-interval 60
 set-option -g status-justify left
 set-option -g status-left '#[bg=colour236]'
 set-option -g status-bg colour237
-set-option -g status-right '#[bg=colour235]#[fg=colour3] #(date "+%a %b %d %H:%M")'
+set-option -g status-right '#[bg=colour235]#[fg=colour7] v#{version} #[bg=colour235]#[fg=colour3] #(date "+%a %b %d %H:%M")'
 
 set-option -g pane-active-border-fg colour3
 set-option -g pane-border-fg colour238
