Tmux: v2.9 replace deprecated style option

--- a/tmux.conf
+++ b/tmux.conf
@@ -102,8 +102,8 @@ set-option -g status-left '#[bg=colour38]'
 set-option -g status-bg colour237
 set-option -g status-right '#[bg=colour235]#[fg=colour13] v#{version} #[bg=colour235]#[fg=colour38] #(date "+%a %b %d %H:%M")'
 
-set-option -g pane-active-border-fg colour38
-set-option -g pane-border-fg colour238
+set-option -g pane-active-border-style fg=colour38
+set-option -g pane-border-style fg=colour238
 
 set-window-option -g window-status-format '#[bg=colour234]#[fg=colour38] #I #[bg=colour237]#[fg=colour38] #W#[fg=colour7]#F'
 set-window-option -g window-status-current-format '#[bg=colour38]#[fg=colour234] #I#[fg=colour39] #[bg=colour234] #W#[bg=colour235]#[fg=colour7]#F#[bg=colour236] '
@@ -123,9 +123,7 @@ bind-key -n 'M-`' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$
 # -------------------------------------------------------------------
 # Message
 # -------------------------------------------------------------------
-set -g message-attr bright
-set -g message-fg red
-set -g message-bg black
+set -g message-style fg=red,bg=black,bright
 
 # -------------------------------------------------------------------
 # Plugins
