Tmux: Set display message time to 4s

--- a/tmux.conf
+++ b/tmux.conf
@@ -124,6 +124,7 @@ bind-key -n 'M-`' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$
 # Message
 # -------------------------------------------------------------------
 set -g message-style fg=red,bg=black,bright
+set -g display-time 4000
 
 # -------------------------------------------------------------------
 # Plugins
