--- a/tmux.conf
+++ b/tmux.conf
@@ -100,7 +100,8 @@ set-option -g status-interval 60
 set-option -g status-justify left
 set-option -g status-left '#[bg=colour38]'
 set-option -g status-bg colour237
-set-option -g status-right '#[bg=colour235]#[fg=colour13] v#{version} #[bg=colour235]#[fg=colour38] #(date "+%a %b %d %H:%M")'
+set-option -g status-right '#[bg=colour235]#[fg=colour13] v#{version} #[bg=colour235]#[fg=colour14] #(curl -s wttr.in/kuala\-lumpur\?format\="%%c%%20%%20%%t&period=60") #[bg=colour235]#[fg=colour38] #(date "+%a %b %d %H:%M")'
+set -g status-right-length 50
 
 set-option -g pane-active-border-style fg=colour38
 set-option -g pane-border-style fg=colour238
