--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# Set default shell
+set -g default-shell /bin/zsh
+
 # -------------------------------------------------------------------
 # Session options
 # -------------------------------------------------------------------
@@ -19,9 +22,6 @@ set-option -g repeat-time 500
 
 # 256-color terminal
 set-option -g default-terminal "screen-256color"
-
-# Sierra
-set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # Add truecolor support (tmux info | grep Tc)
 set-option -ga terminal-overrides ",xterm-256color:Tc"
