--- a/tmux.conf
+++ b/tmux.conf
@@ -80,7 +80,7 @@ bind-key H resize-pane -L 3
 bind-key L resize-pane -R 3
 
 # Synchronize panes
-bind-key * set-window-option synchronize-pane
+bind-key * set-window-option synchronize-panes
 
 # Reload ~/.tmux.conf
 bind-key r source-file ~/.tmux.conf \; display-message "Reloaded config!"
@@ -100,7 +100,7 @@ set-option -g status-interval 60
 set-option -g status-justify left
 set-option -g status-left '#[bg=colour38]'
 set-option -g status-bg colour237
-set-option -g status-right '#[bg=colour235]#[fg=colour13] v#{version} #[bg=colour235]#[fg=colour38] #(date "+%a %b %d %H:%M") #[bg=colour235]#[fg=colour14] #(curl -s wttr.in/~Kuala+Lumpur\?format\="%%t%%20%%c%%20&period=300")'
+set-option -g status-right '#[bg=colour235]#[fg=colour13] v#{version} #[bg=colour235]#[fg=colour38] #(date "+%a %b %d %H:%M") #[bg=colour235]#[fg=colour15] #(weather=$(curl -s wttr.in/~Dusseldorf\?format\="%%t%%20%%c%%20&period=300" --max-time 5); echo $weather | grep -q -E "Unknown location|Sorry" && echo "🌈" || echo $weather)'
 set -g status-right-length 50
 
 set-option -g pane-active-border-style fg=colour38
